2016/fl2016/06-161026/interpreter/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | toplevel_dec_chain SEMISEMI
   3           | LET REC rec_dec SEMISEMI
   4           | SHARP QUIT SEMISEMI

   5  toplevel_dec_chain : dec
   6                     | dec toplevel_dec_chain

   7  arg : EQ expr
   8      | var arg

   9  dec : LET var arg
  10      | LET var arg dec_and

  11  dec_and : AND var arg
  12          | AND var arg dec_and

  13  rec_dec : var var EQ expr
  14          | var var EQ expr AND rec_dec

  15  expr : dec IN expr
  16       | LET REC rec_dec IN expr
  17       | IF expr THEN expr ELSE expr
  18       | FUN fun_expr
  19       | DFUN dfun_expr
  20       | arith_expr EQ arith_expr
  21       | arith_expr LT arith_expr
  22       | arith_expr
  23       | bool_expr

  24  fun_expr : var ARROW expr
  25           | var fun_expr

  26  dfun_expr : var ARROW expr
  27            | var fun_expr

  28  arith_expr : arith_expr PLUS factor_expr
  29             | arith_expr MINUS factor_expr
  30             | factor_expr

  31  bool_expr : expr LAND expr
  32            | expr LOR expr

  33  factor_expr : factor_expr TIMES app_expr
  34              | factor_expr DIV app_expr
  35              | app_expr

  36  app_expr : app_expr atomic_expr
  37           | atomic_expr

  38  atomic_expr : INT
  39              | BOOL
  40              | ID
  41              | LPAR expr RPAR

  42  var : ID

  43  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (43)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	SHARP  shift 11
	.  error

	toplevel  goto 12
	expr  goto 13
	toplevel_dec_chain  goto 14
	dec  goto 15
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (38)

	.  reduce 38


state 4
	atomic_expr : BOOL .  (39)

	.  reduce 39


state 5
	atomic_expr : ID .  (40)

	.  reduce 40


state 6
	toplevel : LET . REC rec_dec SEMISEMI  (3)
	dec : LET . var arg  (9)
	dec : LET . var arg dec_and  (10)
	expr : LET . REC rec_dec IN expr  (16)

	ID  shift 21
	REC  shift 22
	.  error

	var  goto 23


state 7
	expr : IF . expr THEN expr ELSE expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 25
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 8
	atomic_expr : LPAR . expr RPAR  (41)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 27
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 9
	expr : FUN . fun_expr  (18)

	ID  shift 21
	.  error

	var  goto 28
	fun_expr  goto 29


state 10
	expr : DFUN . dfun_expr  (19)

	ID  shift 21
	.  error

	var  goto 30
	dfun_expr  goto 31


state 11
	toplevel : SHARP . QUIT SEMISEMI  (4)

	QUIT  shift 32
	.  error


state 12
	%entry% : '\001' toplevel .  (43)

	.  reduce 43


state 13
	toplevel : expr . SEMISEMI  (1)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	SEMISEMI  shift 35
	.  error


state 14
	toplevel : toplevel_dec_chain . SEMISEMI  (2)

	SEMISEMI  shift 36
	.  error


state 15
	toplevel_dec_chain : dec .  (5)
	toplevel_dec_chain : dec . toplevel_dec_chain  (6)
	expr : dec . IN expr  (15)

	LET  shift 37
	IN  shift 38
	SEMISEMI  reduce 5

	toplevel_dec_chain  goto 39
	dec  goto 40


state 16
	expr : arith_expr . EQ arith_expr  (20)
	expr : arith_expr . LT arith_expr  (21)
	expr : arith_expr .  (22)
	arith_expr : arith_expr . PLUS factor_expr  (28)
	arith_expr : arith_expr . MINUS factor_expr  (29)

	PLUS  shift 41
	MINUS  shift 42
	EQ  shift 43
	LT  shift 44
	LET  reduce 22
	IN  reduce 22
	AND  reduce 22
	LAND  reduce 22
	LOR  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	RPAR  reduce 22
	SEMISEMI  reduce 22


state 17
	expr : bool_expr .  (23)

	.  reduce 23


state 18
	arith_expr : factor_expr .  (30)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 45
	DIV  shift 46
	LET  reduce 30
	IN  reduce 30
	AND  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	LAND  reduce 30
	LOR  reduce 30
	EQ  reduce 30
	LT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	RPAR  reduce 30
	SEMISEMI  reduce 30


state 19
	factor_expr : app_expr .  (35)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LET  reduce 35
	IN  reduce 35
	AND  reduce 35
	PLUS  reduce 35
	TIMES  reduce 35
	MINUS  reduce 35
	DIV  reduce 35
	LAND  reduce 35
	LOR  reduce 35
	EQ  reduce 35
	LT  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	RPAR  reduce 35
	SEMISEMI  reduce 35

	atomic_expr  goto 47


state 20
	app_expr : atomic_expr .  (37)

	.  reduce 37


state 21
	var : ID .  (42)

	.  reduce 42


state 22
	toplevel : LET REC . rec_dec SEMISEMI  (3)
	expr : LET REC . rec_dec IN expr  (16)

	ID  shift 21
	.  error

	rec_dec  goto 48
	var  goto 49


state 23
	dec : LET var . arg  (9)
	dec : LET var . arg dec_and  (10)

	ID  shift 21
	EQ  shift 50
	.  error

	arg  goto 51
	var  goto 52


state 24
	dec : LET . var arg  (9)
	dec : LET . var arg dec_and  (10)
	expr : LET . REC rec_dec IN expr  (16)

	ID  shift 21
	REC  shift 53
	.  error

	var  goto 23


state 25
	expr : IF expr . THEN expr ELSE expr  (17)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	THEN  shift 54
	.  error


state 26
	expr : dec . IN expr  (15)

	IN  shift 38
	.  error


state 27
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)
	atomic_expr : LPAR expr . RPAR  (41)

	LAND  shift 33
	LOR  shift 34
	RPAR  shift 55
	.  error


state 28
	fun_expr : var . ARROW expr  (24)
	fun_expr : var . fun_expr  (25)

	ID  shift 21
	ARROW  shift 56
	.  error

	var  goto 28
	fun_expr  goto 57


state 29
	expr : FUN fun_expr .  (18)

	.  reduce 18


state 30
	dfun_expr : var . ARROW expr  (26)
	dfun_expr : var . fun_expr  (27)

	ID  shift 21
	ARROW  shift 58
	.  error

	var  goto 28
	fun_expr  goto 59


state 31
	expr : DFUN dfun_expr .  (19)

	.  reduce 19


state 32
	toplevel : SHARP QUIT . SEMISEMI  (4)

	SEMISEMI  shift 60
	.  error


state 33
	bool_expr : expr LAND . expr  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 61
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 34
	bool_expr : expr LOR . expr  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 62
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 35
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 36
	toplevel : toplevel_dec_chain SEMISEMI .  (2)

	.  reduce 2


state 37
	dec : LET . var arg  (9)
	dec : LET . var arg dec_and  (10)

	ID  shift 21
	.  error

	var  goto 23


state 38
	expr : dec IN . expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 63
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 39
	toplevel_dec_chain : dec toplevel_dec_chain .  (6)

	.  reduce 6


state 40
	toplevel_dec_chain : dec .  (5)
	toplevel_dec_chain : dec . toplevel_dec_chain  (6)

	LET  shift 37
	SEMISEMI  reduce 5

	toplevel_dec_chain  goto 39
	dec  goto 40


state 41
	arith_expr : arith_expr PLUS . factor_expr  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 64
	app_expr  goto 19
	atomic_expr  goto 20


state 42
	arith_expr : arith_expr MINUS . factor_expr  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 65
	app_expr  goto 19
	atomic_expr  goto 20


state 43
	expr : arith_expr EQ . arith_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 66
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 44
	expr : arith_expr LT . arith_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 67
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 45
	factor_expr : factor_expr TIMES . app_expr  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 68
	atomic_expr  goto 20


state 46
	factor_expr : factor_expr DIV . app_expr  (34)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 69
	atomic_expr  goto 20


state 47
	app_expr : app_expr atomic_expr .  (36)

	.  reduce 36


state 48
	toplevel : LET REC rec_dec . SEMISEMI  (3)
	expr : LET REC rec_dec . IN expr  (16)

	IN  shift 70
	SEMISEMI  shift 71
	.  error


state 49
	rec_dec : var . var EQ expr  (13)
	rec_dec : var . var EQ expr AND rec_dec  (14)

	ID  shift 21
	.  error

	var  goto 72


state 50
	arg : EQ . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 73
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 51
	dec : LET var arg .  (9)
	dec : LET var arg . dec_and  (10)

	AND  shift 74
	LET  reduce 9
	IN  reduce 9
	SEMISEMI  reduce 9

	dec_and  goto 75


state 52
	arg : var . arg  (8)

	ID  shift 21
	EQ  shift 50
	.  error

	arg  goto 76
	var  goto 52


state 53
	expr : LET REC . rec_dec IN expr  (16)

	ID  shift 21
	.  error

	rec_dec  goto 77
	var  goto 49


state 54
	expr : IF expr THEN . expr ELSE expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 78
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 55
	atomic_expr : LPAR expr RPAR .  (41)

	.  reduce 41


state 56
	fun_expr : var ARROW . expr  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 79
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 57
	fun_expr : var fun_expr .  (25)

	.  reduce 25


state 58
	dfun_expr : var ARROW . expr  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 80
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 59
	dfun_expr : var fun_expr .  (27)

	.  reduce 27


state 60
	toplevel : SHARP QUIT SEMISEMI .  (4)

	.  reduce 4


state 61
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr LAND expr .  (31)
	bool_expr : expr . LOR expr  (32)

	.  reduce 31


state 62
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)
	bool_expr : expr LOR expr .  (32)

	LAND  shift 33
	LET  reduce 32
	IN  reduce 32
	AND  reduce 32
	LOR  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	SEMISEMI  reduce 32


state 63
	expr : dec IN expr .  (15)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 15
	IN  reduce 15
	AND  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 64
	arith_expr : arith_expr PLUS factor_expr .  (28)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 45
	DIV  shift 46
	LET  reduce 28
	IN  reduce 28
	AND  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	LAND  reduce 28
	LOR  reduce 28
	EQ  reduce 28
	LT  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	SEMISEMI  reduce 28


state 65
	arith_expr : arith_expr MINUS factor_expr .  (29)
	factor_expr : factor_expr . TIMES app_expr  (33)
	factor_expr : factor_expr . DIV app_expr  (34)

	TIMES  shift 45
	DIV  shift 46
	LET  reduce 29
	IN  reduce 29
	AND  reduce 29
	PLUS  reduce 29
	MINUS  reduce 29
	LAND  reduce 29
	LOR  reduce 29
	EQ  reduce 29
	LT  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	SEMISEMI  reduce 29


state 66
	expr : arith_expr EQ arith_expr .  (20)
	arith_expr : arith_expr . PLUS factor_expr  (28)
	arith_expr : arith_expr . MINUS factor_expr  (29)

	PLUS  shift 41
	MINUS  shift 42
	LET  reduce 20
	IN  reduce 20
	AND  reduce 20
	LAND  reduce 20
	LOR  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20


state 67
	expr : arith_expr LT arith_expr .  (21)
	arith_expr : arith_expr . PLUS factor_expr  (28)
	arith_expr : arith_expr . MINUS factor_expr  (29)

	PLUS  shift 41
	MINUS  shift 42
	LET  reduce 21
	IN  reduce 21
	AND  reduce 21
	LAND  reduce 21
	LOR  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	SEMISEMI  reduce 21


state 68
	factor_expr : factor_expr TIMES app_expr .  (33)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LET  reduce 33
	IN  reduce 33
	AND  reduce 33
	PLUS  reduce 33
	TIMES  reduce 33
	MINUS  reduce 33
	DIV  reduce 33
	LAND  reduce 33
	LOR  reduce 33
	EQ  reduce 33
	LT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAR  reduce 33
	SEMISEMI  reduce 33

	atomic_expr  goto 47


state 69
	factor_expr : factor_expr DIV app_expr .  (34)
	app_expr : app_expr . atomic_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LET  reduce 34
	IN  reduce 34
	AND  reduce 34
	PLUS  reduce 34
	TIMES  reduce 34
	MINUS  reduce 34
	DIV  reduce 34
	LAND  reduce 34
	LOR  reduce 34
	EQ  reduce 34
	LT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	RPAR  reduce 34
	SEMISEMI  reduce 34

	atomic_expr  goto 47


state 70
	expr : LET REC rec_dec IN . expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 81
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 71
	toplevel : LET REC rec_dec SEMISEMI .  (3)

	.  reduce 3


state 72
	rec_dec : var var . EQ expr  (13)
	rec_dec : var var . EQ expr AND rec_dec  (14)

	EQ  shift 82
	.  error


state 73
	arg : EQ expr .  (7)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 7
	IN  reduce 7
	AND  reduce 7
	SEMISEMI  reduce 7


state 74
	dec_and : AND . var arg  (11)
	dec_and : AND . var arg dec_and  (12)

	ID  shift 21
	.  error

	var  goto 83


state 75
	dec : LET var arg dec_and .  (10)

	.  reduce 10


state 76
	arg : var arg .  (8)

	.  reduce 8


state 77
	expr : LET REC rec_dec . IN expr  (16)

	IN  shift 70
	.  error


state 78
	expr : IF expr THEN expr . ELSE expr  (17)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	ELSE  shift 84
	.  error


state 79
	fun_expr : var ARROW expr .  (24)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 24
	IN  reduce 24
	AND  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	RPAR  reduce 24
	SEMISEMI  reduce 24


state 80
	dfun_expr : var ARROW expr .  (26)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 26
	IN  reduce 26
	AND  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	RPAR  reduce 26
	SEMISEMI  reduce 26


state 81
	expr : LET REC rec_dec IN expr .  (16)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 16
	IN  reduce 16
	AND  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 82
	rec_dec : var var EQ . expr  (13)
	rec_dec : var var EQ . expr AND rec_dec  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 85
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 83
	dec_and : AND var . arg  (11)
	dec_and : AND var . arg dec_and  (12)

	ID  shift 21
	EQ  shift 50
	.  error

	arg  goto 86
	var  goto 52


state 84
	expr : IF expr THEN expr ELSE . expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 87
	dec  goto 26
	arith_expr  goto 16
	bool_expr  goto 17
	factor_expr  goto 18
	app_expr  goto 19
	atomic_expr  goto 20


state 85
	rec_dec : var var EQ expr .  (13)
	rec_dec : var var EQ expr . AND rec_dec  (14)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	AND  shift 88
	LAND  shift 33
	LOR  shift 34
	IN  reduce 13
	SEMISEMI  reduce 13


state 86
	dec_and : AND var arg .  (11)
	dec_and : AND var arg . dec_and  (12)

	AND  shift 74
	LET  reduce 11
	IN  reduce 11
	SEMISEMI  reduce 11

	dec_and  goto 89


state 87
	expr : IF expr THEN expr ELSE expr .  (17)
	bool_expr : expr . LAND expr  (31)
	bool_expr : expr . LOR expr  (32)

	LAND  shift 33
	LOR  shift 34
	LET  reduce 17
	IN  reduce 17
	AND  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 88
	rec_dec : var var EQ expr AND . rec_dec  (14)

	ID  shift 21
	.  error

	rec_dec  goto 90
	var  goto 49


state 89
	dec_and : AND var arg dec_and .  (12)

	.  reduce 12


state 90
	rec_dec : var var EQ expr AND rec_dec .  (14)

	.  reduce 14


29 terminals, 17 nonterminals
44 grammar rules, 91 states
